test/check/redefine_step_errors.expected
File "redefine_step.mim", line 6, characters 5-8
6 | step add (d, e) --> f
         ^^^
Error: Redefinition of step add
Also defined here:
1 | step add (a, b) --> c
         ^^^
